# capsule

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SPEC.md  pyproject.toml
deck/: index.html
docs/: L2-DESIGN.md
examples/wolfctf/: CLAUDE.md
examples/wolfctf/ai-report/: capsule.yaml
examples/wolfctf/auth-core/: capsule.yaml
examples/wolfctf/lab-runtime/: capsule.yaml
examples/yingjieli/: README.md
server/: _headers  _redirects  capsule.yaml  install-skill.sh  package-lock.json  package.json  registry.json  tsconfig.json  wrangler.toml
server/assets/: style.css
server/benchmarks/: results.json
server/functions/: auth.ts  benchmarks.ts  compose.ts  index.ts  mcp.ts  research.ts
server/functions/_lib/: auth.ts  github.ts  registry.ts  render.ts  schema.ts
server/functions/api/v1/capsule/: [[slug]].ts
server/functions/api/v1/capsules/: [[slug]].ts
server/functions/api/v1/resolve/: [[slug]].ts
server/functions/c/: [[slug]].ts
skills/capsule-compose/: SKILL.md
skills/capsule-compose/scripts/: list-capsules.sh
src/capsule/: __init__.py  aigen.py  aigen_recon.py  bundle.py  cf_workers_ai.py  cli.py  client.py  compose.py  decompose.py  decompose_materialize.py  decompose_multipass.py  diff.py  graph.py  loader.py  manpage.py  publish.py  push.py  reconstruct.py  schema.py  status.py  templates.py  verify.py
tools/: benchmark_decompose.py  gen_brand_images.py  gen_deck_images.py
